update storage controller